# pymolcode

./: .gitignore  AGENTS.md  ARCHITECTURE_PLAN.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SOUL.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
docs/: api.md  external-mcp-servers.md  headless-rendering.md  index.md  mcp.md  memory.md  migration-api-key-to-oauth.md  openclaw-extension.md  opencode-tui-embedding.md  pymol-plugin-interface.md  skills.md
docs/plugins/example/: README.md  plugin.json  plugin.py
launcher/: pymolcode-launcher  pymolcode_launcher.py
node/: AGENTS.md  package-lock.json  package.json  tsconfig.json
node/src/: bridge-client.ts  config.ts  index.ts  types.ts
node/src/tools/: registry.ts  types.ts
python/: AGENTS.md  cli.py
python/agent/: __init__.py  agent.py  background.py  orchestrator.py  provider.py  tools.py  types.py
python/auth/: __init__.py  oauth.py  providers.py  token_store.py
python/bridge/: gui_rest_adapter.py  handlers.py  rest_adapter.py  rest_server.py  server.py
python/persistence/: __init__.py  chat_store.py  persistence.py
python/plugins/: __init__.py  loader.py  registry.py
python/protocol/: README.md  __init__.py  errors.py  framing.py  spec.py
python/pymol/: __init__.py  executor.py  panel.py  runtime.py
python/session/: __init__.py  bootstrap.py  config.py  schema.py
python/skill/: __init__.py  base.py  builtin.py  registry.py
python/skill/bridge/: __init__.py  discovery.py  omo_adapter.py
python/validation/: __init__.py  hash_edit.py
python/workflow/: __init__.py  ultrawork.py
scripts/: generate_evidence_logs.sh  run_benchmark.py  run_tests_py311.sh  security_audit.sh
skills/: SOURCES.md
skills/00-core/pymolcode/: SKILL.md
skills/00-core/pymolcode/references/: advanced-techniques.md  pymol-api.md
skills/01-scientific/databases/brenda-database/scripts/: brenda_queries.py
skills/02-research/drug-discovery-trends/: SKILL.md
skills/02-research/drug-target-search/: SKILL.md
skills/02-research/drug-target-search/references/: enhanced_web.py
skills/02-research/drug-target-search/scripts/: compound_search.py  literature_search.py  patent_search.py  pipeline.py  structure_search.py  target_search.py  web_news_search.py
skills/02-research/ensemble-docking/: SKILL.md
skills/02-research/ensemble-docking/references/: consensus.md  diffdock.md  gnina.md  outputs.md  uni-dock.md
skills/03-ai-ml/question-analyst/: SKILL.md
skills/06-documentation/slidev/: SKILL.md
skills/06-documentation/slidev/references/: content-workflow.md  export-workflow.md  syntax.md  troubleshooting.md
skills/06-documentation/slidev/scripts/: export_presentation.sh  init_presentation.sh
skills/08-productivity/async-respond/: SKILL.md
skills/08-productivity/async-respond/scripts/: task_manager.py
