[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "pymolcode"
version = "0.2.0"
description = "LLM-Enhanced Molecular Visualization Platform for Drug Discovery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "pymolcode contributors"}
]
keywords = [
    "drug-discovery",
    "molecular-visualization",
    "llm",
    "agent",
    "pymol",
    "mcp",
    "structure-based-design",
    "oauth",
    "hephaestus",
    "ultrawork",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anyio>=4.0.0",
    "pyyaml>=6.0.0",

    # MCP Protocol
    "mcp>=1.0.0",

    # LLM Abstraction
    "litellm>=1.0.0",

    # CLI
    "click>=8.1.0",
    "textual>=0.47.0",
    "rich>=13.0.0",

    # Scientific
    "rdkit>=2023.9.0",
    "biopython>=1.83",
    "numpy>=1.26.0",
    "pandas>=2.1.0",

    # Infrastructure
    "structlog>=24.0.0",
    "httpx>=0.27.0",

    # Authentication
    "pyjwt>=2.9.0",
]

[project.optional-dependencies]
gui = [
    "PyQt5>=5.15.0",
    "PyQt6>=6.6.0",
]
analysis = [
    "MDAnalysis>=2.6.0",
    "mdtraj>=1.10.0",
]
all = [
    "pymolcode[gui,analysis]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]

[project.scripts]
pymolcode = "python.cli:main"
pymolcode-bridge = "python.bridge.server:main"
pymolcode-launcher = "launcher.pymolcode_launcher:main"

[project.entry-points."pymol.plugins"]
pymolcode = "python.pymol.panel:__init_plugin__"

[project.urls]
Homepage = "https://github.com/chenDeepin/pymolcode"
Documentation = "https://github.com/chenDeepin/pymolcode#readme"
Repository = "https://github.com/chenDeepin/pymolcode.git"
Issues = "https://github.com/chenDeepin/pymolcode/issues"

[tool.hatch.build.targets.wheel]
packages = ["python", "launcher"]

# Include assets (splash screen, etc.)
artifacts = ["python/pymol/assets/*.png"]

[tool.hatch.build.targets.sdist]
include = [
    "/python",
    "/launcher",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pymol.*",
    "rdkit.*",
    "Bio.*",
    "MDAnalysis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "skip_pymol: requires --run-pymol to run",
    "bridge_integration: bridge integration smoke tests",
    "requires_py311: requires Python 3.11+",
    "auth: authentication tests",
]

[tool.coverage.run]
source = ["python"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
